--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -58,7 +58,7 @@
 {
     name=UX,
     description={Termine utilizzato per definire la relazione tra una persona e un prodotto, un servizio, o un sistema. 
-	Il termine presuppone un approccio olistico: cerca di comprendere tutto ciò che ruota attorno all'interazione di un utente con un prodotto.}
+	Il termine presuppone un approccio olistico: cerca di comprendere tutto ciò che ruota attorno all'interazione di un utente con un prodotto}
 }
 
 \newglossaryentry{JWT}
@@ -66,79 +66,79 @@
     name=JWT,
     description={JSON Web Token - standard Internet proposto per la creazione di dati con firma opzionale e/o crittografia 
 	opzionale il cui payload contiene JSON che asserisce un certo numero di attestazioni. I token 
-	vengono firmati utilizzando un segreto privato o una chiave pubblica/privata.}
+	vengono firmati utilizzando un segreto privato o una chiave pubblica/privata}
 }
 
 \newglossaryentry{CASE}
 {
     name=CASE,
     description={Gli strumenti C.A.S.E. (acronimo di Computer-Aided Software Engineering, ovvero sviluppo 
-	del software assistito dal computer) sono quelli che supportano lo sviluppo del software attraverso interfacce grafiche (shell) e visuali e librerie di funzionalità. }
+	del software assistito dal computer) sono quelli che supportano lo sviluppo del software attraverso interfacce grafiche (shell) e visuali e librerie di funzionalità}
 }
 
 \newglossaryentry{UI Design System}
 {
     name=UI Design System,
     description={Raccolta di componenti che possono essere assemblati insieme 
-	per costruire applicazioni e siti web. Il Design System permette ai team di progettazione e di sviluppo di costruire prodotti migliori e in modo più veloce, grazie alla possibilità di creare design riusabile e quindi scalabile.}
+	per costruire applicazioni e siti web. Il Design System permette ai team di progettazione e di sviluppo di costruire prodotti migliori e in modo più veloce, grazie alla possibilità di creare design riusabile e quindi scalabile}
 }
 
 \newglossaryentry{use-case driven}
 {
     name=Use-case driven,
     description={Tecnica di modellazione nel processo di analisi dello sviluppo software. 
-	Rende l'architettura del sistema modellata sulle esigenze degli utenti.}
+	Rende l'architettura del sistema modellata sulle esigenze degli utenti}
 }
 
 \newglossaryentry{deploy}
 {
     name=Deploy,
-    description={Distribuzione o rilascio al cliente, con relativa installazione, configurazione e messa in funzione o esercizio, di una applicazione o di un sistema software.}
+    description={Distribuzione o rilascio al cliente, con relativa installazione, configurazione e messa in funzione o esercizio, di una applicazione o di un sistema software}
 }
 
 \newglossaryentry{REST}
 {
     name=REST,
     description={L'acronimo REST sta per "Representational State Transfer" e si riferisce a uno stile architetturale 
-	per sistemi distruibuiti. Rappresenta un sistema di trasmissione di dati basato su HTTP.}
+	per sistemi distruibuiti. Rappresenta un sistema di trasmissione di dati basato su HTTP}
 }
 
 \newglossaryentry{UDF}
 {
     name=UDF,
     description={L'acronimo UDF (Unidirectional Data Flow) è un design pattern dove gli stati fluiscono verso le componenti 
-	inferiori e gli eventi verso quelle superiori.}
+	inferiori e gli eventi verso quelle superiori}
 }
 
-\newglossaryentry{Framework}
+\newglossaryentry{framework}
 {
     name=Framework,
-    description={Architettura logica di supporto sul quale un software può essere progettato e realizzato, spesso facilitandone lo sviluppo da parte del programmatore.}
+    description={Architettura logica di supporto sul quale un software può essere progettato e realizzato, spesso facilitandone lo sviluppo da parte del programmatore}
 }
 
 \newglossaryentry{open-source}
 {
     name=Open-source,
-    description={Tipo di software libero da vincoli di copyright o di altra natura.}
+    description={Tipo di software libero da vincoli di copyright o di altra natura}
 }
 
 \newglossaryentry{Mockito}
 {
     name=Mockito,
     description={Framework di testing open source per Java. 
-	Permette la creazione di oggetti test double in unit test automatizzati.}
+	Permette la creazione di oggetti test double in unit test automatizzati}
 }
 
 \newglossaryentry{WECT}
 {
     name=WECT,
-    description={Weak Equivalence Class Testing.}
+    description={Weak Equivalence Class Testing}
 }
 
 \newglossaryentry{CFG}
 {
     name=CFG,
-    description={Control Flow Graph.}
+    description={Control Flow Graph}
 }
 
 \begin{document}
@@ -658,7 +658,7 @@ Questa sezione conterrà invece i requisiti \textit{non funzionali} dell'applica
 		\textbf{Nome} & \textbf{Descrizione}                                                                              \\
 		\hline
 		Sicurezza     & Il sistema deve essere sicuro, con dati criptati e protetti da attacchi esterni.
-		Nel caso dell'autenticazione per i client, verrà salvato un token (nello specifico \textbf{\Gls{JWT}}) sul dispositivo. \\
+		Nel caso dell'autenticazione per i client, verrà salvato un token (nello specifico \Gls{JWT}) sul dispositivo. \\
 		\hline
 	\end{tabular}
 	\caption{RNF5}
@@ -931,7 +931,7 @@ Sono presentate in questa sezione le tabelle di Cockburn relative a due casi d'u
 	\hline
 \end{tabularx}
 
-\subsection{\Gls{UX} Design}
+\subsection{UX Design}
 \subsubsection{Definizione delle Personas}
 Uno dei principali obiettivi dello sviluppo dell'applicativo è stato quello di \textit{conoscere i potenziali utenti}
 e di delineare dei loro probabili comportamenti, al fine di garantire all'intero target di utenza la migliore esperienza
@@ -942,7 +942,7 @@ Oltre a creare semplicemente un'ottima user experience, dunque, si è prestata u
 I profili elaborati prendono il nome di \textbf{personas}. Le \textit{personas} sono veri e propri identikit, creati sulla base di ricerche, che rappresentano un particolare
 gruppo di clienti che potrebbero utilizzare un prodotto. Delineare le caratteristiche di tali clienti permette di conoscere e comprendere i
 loro bisogni, obiettivi, paure e motivazioni.\\
-Proprio questi identikit, in conclusione, hanno contruibito allo sviluppo di una \textbf{UX} piacevole, funzionale ed elegante. Di seguito sono mostrati tre di questi profili elaborati. \\
+Proprio questi identikit, in conclusione, hanno contruibito allo sviluppo di una UX piacevole, funzionale ed elegante. Di seguito sono mostrati tre di questi profili elaborati. \\
 
 \begin{figure}[!htbp]
 	\centering
@@ -970,7 +970,7 @@ temperamento: si ritiene fondamentale, infatti, adattare l'esperienza utente in 
 Attraverso una fase di \textbf{brainstorming} sono state generate idee per sfruttare le opportunità e risolvere i problemi emersi durante la creazione delle \textit{personas}.
 La raccolta di opinioni e suggerimenti dei componenti del team di progettazione ha analizzato anche le proposte più semplici ed intuitive: è stato ritenuto importante, infatti, valutare ogni
 possibilità nata dal processo creativo. \\
-Una volta approfondite le proposte, è stato deciso di realizzare dei prototipi dinamici con un tool di \textbf{CASE\Gls{CASE}}; nello specifico, la scelta di quest'ultimo è ricaduta su \textit{Figma}.\\
+Una volta approfondite le proposte, è stato deciso di realizzare dei prototipi dinamici con un tool di \Gls{CASE}; nello specifico, la scelta di quest'ultimo è ricaduta su \textit{Figma}.\\
 
 Periodicamente ogni prototipo è stato discusso e rielaborato, in un processo coinvolgente tutti i membri del team e avente come oggetto, in particolare, le seguenti analisi:
 \begin{itemize}
@@ -1010,7 +1010,7 @@ rispetto al contesto di prototipazione e sviluppo.
 
 \newpage
 \subsubsection{Definizione di uno stile di design}
-Per raffinare l'esperienza utente è stato ritenuto un buon approccio quello di affidarsi ad uno specifico \textbf{UI Design System\Gls{UI Design System}}.
+Per raffinare l'esperienza utente è stato ritenuto un buon approccio quello di affidarsi ad uno specifico \Gls{UI Design System}.
 La scelta è stata effettuata tra diversi sistemi concorrenti, ricadendo infine su
 \textbf{Material}\footnote{Material è un design system creato da Google per facilitare lo sviluppo di UX di altissima qualità per Android, iOS, Flutter, e Web-App.}.
 
@@ -1237,7 +1237,7 @@ si è fatta la scelta di rappresentarlo tramite regioni interne, riportate poi p
 
 \newpage
 \subsection{Classi, oggetti e relazioni di analisi}
-Nella sezione seguente sono riportati i diagrammi di analisi \textbf{Entity Control Boundary}, un pattern architetturale \textit{use-case driven\Gls{use-case driven}}.
+Nella sezione seguente sono riportati i diagrammi di analisi \textbf{Entity Control Boundary}, un pattern architetturale \Gls{use-case driven}.
 
 \subsubsection{Autenticazione}
 \begin{figure}[!htbp]
@@ -1689,7 +1689,7 @@ Nello sviluppo del software, per implementare determinate funzionalità si è sc
 	\item \textbf{EC2} - l'\textbf{Elastic Compute Cloud} (Amazon EC2) fornisce capacità di calcolo scalabile in AWS Cloud.
 	      Esso offre ambienti di elaborazione virtuale, noti come \textit{istanze}, varie configurazioni di CPU, memoria,
 	      archiviazione e capacità di rete per le istanza note come \textit{tipi di istanza}.
-	      La scelta di tale servizio è stata finalizzata al \Gls{deploy} dell'applicativo Spring, nella realizzazione del Rest Service.
+	      La scelta di tale servizio è stata finalizzata al \Gls{deploy} dell'applicativo Spring, nella realizzazione del \Gls{REST} Service.
 	\item \textbf{RDS} - Amazon RDS ha permesso la configurazione e l'utilizzo del database relazionale alla base del software prodotto;
 	\item \textbf{S3} - il \textbf{Simple Storage Service} (Amazon S3) permette l'archiviazione di oggetti in modo scalabile.
 	      Esso è stato adoperato in merito alla preservazione permanente dei file immagine caricati dagli utenti;
@@ -1917,7 +1917,7 @@ della moltitudine di observables citati in precedenza. \\
 	      che dell'app stessa. Gli Intent si traducono in \textit{Event} ed \textit{Effect}.
 \end{itemize}
 
-L'integrazione dei due pattern architetturali sopracitati culmina nella nascita di un nuovo pattern, chiamato dagli sviluppatori Android \textbf{UDF}.\\
+L'integrazione dei due pattern architetturali sopracitati culmina nella nascita di un nuovo pattern, chiamato dagli sviluppatori Android \Gls{UDF}.\\
 Alcune delle caratteristiche di UDF possono essere così sintetizzate:
 \begin{itemize}
 	\item Presenza di \textit{StateHolder}, necessari per ogni ViewModel nella maggior parte dei casi e non necessariamente unici;
@@ -2203,7 +2203,7 @@ Sono di seguito presentati i diagrammi di sequenza di design per due casi d'uso 
 
 \subsection{Codice xUnit per testing di 3 metodi}
 In questa sezione sono esposti dei casi di test per 3 metodi non banali: per ciascuno di essi sono state adottate strategie specifiche.
-È bene precisare che - per effettuare alcuni test - è stato necessario utilizzare il framework open-source\Gls \textbf{Mockito\Gls{Mockito}},
+È bene precisare che - per effettuare alcuni test - è stato necessario utilizzare il \Gls{framework} \Gls{open-source} \Gls{Mockito},
 che consente la creazione di \textit{test double} (informalmente detti \textit{mock}). \\
 Mockito ha permesso di rimpiazzare le dipendenze delle classi dove sono presenti 2 dei 3 metodi sotto test, evitando
 la creazione di implementazioni fittizie per le dipendenze.
@@ -2253,7 +2253,7 @@ Di seguito sono riportate le classi di equivalenza identificate:
 	\caption{Classi di equivalenza individuate per \textit{formValidator}}
 \end{table}
 
-Nello specifico, è stata effettuata la scelta di adottare un approccio \textbf{WECT}.
+Nello specifico, è stata effettuata la scelta di adottare un approccio \Gls{WECT}.
 Non esistendo ancora - essendo in fase di registrazione - un'effettiva correlazione tra i parametri presi in ingresso 
 dal metodo, è stato sufficiente verificare la validità degli stessi. \\
 La minima copertura fornita da \textbf{WECT} in questo caso è vantaggiosa; 
@@ -2328,7 +2328,7 @@ Una volta analizzati i cammini è stata individuata una lista di possibili input
 Ciò è stato possibile utilizzando Mockito per testare il metodo sulla base del valore ritornato dalla dipendenza. In particolare, è stato utilizzato un valore predefinito per prescindere dall'implementazione, trattandosi di uno Unit Test.
 
 \newpage
-Di seguito sono riportati il CFG, il codice ed i risultati dei test sul metodo.
+Di seguito sono riportati il \Gls{CFG}, il codice ed i risultati dei test sul metodo.
 \begin{figure}[!htbp]
 	\centering
 	\includegraphics[width=\textwidth]{code/chat-whitebox.pdf}
